refactor: downgrade to Minecraft 1.16 (fixes #30)